[package]
name = "aor2021"
version = "0.1.0"
edition = "2021"
authors = ["James Youngman <james@youngman.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"		# day 09
nom = "7"			# day 17
pathfinding = "3.0.5"           # day 15
tracing = "0.1"                 # day 17
tracing-subscriber = "0.2"	# day 17

[[bin]]
name = "day01"
[[bin]]
name = "day02"
[[bin]]
name = "day03"
[[bin]]
name = "day04"
[[bin]]
name = "day05"
[[bin]]
name = "day06"
[[bin]]
name = "day07"
[[bin]]
name = "day08"
[[bin]]
name = "day09"
[[bin]]
name = "day10"
[[bin]]
name = "day11"
[[bin]]
name = "day12"
[[bin]]
name = "day13"
[[bin]]
name = "day14"
[[bin]]
name = "day15"
[[bin]]
name = "day16"
[[bin]]
name = "day17"
[[bin]]
name = "day20"
